Fixed word wrap issue in introductory text

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -51,7 +51,7 @@
 		padding-right: 30px;
 		padding-top: 25px;
 		font-size: 16px;
-		line-height: 5px;
+		/*line-height: 5px;*/
 		color: #636363;
 	}
 
@@ -96,20 +96,16 @@
 		height: auto;
 	}
 
-	#heading p {
-		line-height: 0px;
-	}
-
-	#para-two {
-		padding-left: 22px;
-	}
-
-	#para-three {
-		padding-left: 120px;
+	div#para-one {
+		width: 50%;
+		height: auto;
+		padding-top: 15px;
+		white-space: normal;
+		text-align: center;
 	}
 
 	body {
-		line-height: 1;
+		/*line-height: 1em;*/
 	}
 
 	ol, ul {
